--- a/style.css
+++ b/style.css
@@ -86,3 +86,23 @@ footer {
   background-color: #f5f5f5;
   margin-top: 2rem;
 }
+
+@media (max-width: 767px) {
+  .intro-text h1 {
+    font-size: 1.6rem;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+  .intro-text p {
+    font-size: 0.95rem;
+    line-height: 1.6;
+    text-align: center;
+    padding: 0 1rem;
+  }
+
+  .intro-image img {
+    width: 120px;
+    height: 120px;
+  }
+}
